<resources>
    <string name="app_name">HI TECH</string>
    <string name="news">NEWS</string>
    <string name="events">EVENTS</string>
    <string name="shop">HI SHOP</string>
    <string name="contact">CONTACT</string>
    <string name="problem">Report app problem</string>
    <string name="login">Admin log in</string>
    <string name="about">About HI TECH</string>
    <string name="about_us">ABOUT US</string>
    <string name="about_content">HI TECH is the student association for all those who study at Jönköping School of Engineering. The association has been working to promote the interests of students for more than thirty years. This includes arranging joint activities, parties, pub nights and kick-off; many of the fun events that contribute to a more enjoyable social life for students. HI TECH also works to promote student influence and educational scrutiny at, and in conjunction with, Jönköping School of Engineering.</string>
    <string name="about_content_more">HI TECH is a lot more than just board meetings. It is an association in which more than 150 people are involved in some form, such as via committees, projects and events. HI TECH is an association that is full of opportunities to improve the quality of student life at the School of Engineering, day by day.</string>
    <string name="visit_our_website">Visit our website</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="choose_email_client">Choose email client..</string>
    <string name="order_now">PLACE AN ORDER</string>
    <string name="admin_login_loginButton">Login</string>
    <string name="admin_login_passwordInputHint">Password</string>
    <string name="admin_login_emailInputHint">Email</string>
    <string name="admin_login_registerText">Register new admin</string>
    <string name="admin_login_forgotPasswordText">Forgot password?</string>
    <string name="register_user_repeatPassword">Repeat Password</string>
    <string name="register_user_name">Name</string>
    <string name="register_user_role">Role</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="User_page_logout">Logout</string>
    <string name="user_page_resetPassword">Reset password</string>
    <string name="user_page_updateUserInfo">Update user info</string>
    <string name="user_page_update">Update</string>
    <string name="user_page_deleteAccount">Delete Account</string>
    <string name="new_post">NEW POST</string>
    <string name="content">Content</string>
    <string name="notification_description">Notification description</string>
    <string name="create_notification">Create notification</string>
    <string name="create_post">CREATE POST</string>
    <string name="go_back">GO BACK</string>
    <string name="emailEmpty">Email is empty</string>
    <string name="invalidEmail">Not valid e-mail</string>
    <string name="passwordEmpty">Password is empty</string>
    <string name="passwordToWeak">Password need to be at least 6 character long, contain at least one uppercase letter, at least one lowercase letter and no spaces.</string>
    <string name="passwordNotMatch">Passwords does not match</string>
    <string name="nameEmpty">Name is empty</string>
    <string name="roleEmpty">Role is empty</string>
    <string name="createUserSuccessful">User was created successfully!</string>
    <string name="internalError">Something went wrong, check your internet connection and try again.</string>
    <string name="resetPasswordInputError">Write your email here and press *Forgot password?* again.</string>
    <string name="resetPasswordConfirmation">"Do you want a reset link to be sent to </string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="resetConfirmed">A reset link was sent to </string>
    <string name="emailNotFound">No user is tied to this email, please use a correct email.</string>
    <string name="invalidPassword">Wrong password, try again.</string>
    <string name="emailNotVerified">Check your email to verify your account.</string>
    <string name="loginSuccessful">Login successful!</string>
    <string name="userLoggedOut">User logged out!</string>
    <string name="errorAccessData">Error, could not access user data.</string>
    <string name="UpdateUserInformation">Update user information</string>
    <string name="updateUserConfirmation">Do you want to update your user information?</string>
    <string name="updateUserSuccessful">User was updated successfully!</string>
    <string name="deleteAccount">Delete account</string>
    <string name="deleteAccountConfirmation">Do you really want to delete your account? This action can not be undone.</string>
    <string name="accountDeleted">Account deleted.</string>
    <string name="update_post">UPDATE POST</string>
    <string name="report_issue">What is the issue?</string>
    <string name="failed_create_post">Failed to create post</string>
    <string name="delete_event">Delete event</string>
    <string name="delete_event_are_you_sure">Are you sure you want to delete this event?</string>
    <string name="failed_update_event">Failed to update event</string>
    <string name="failed_create_event">Failed to create event</string>
    <string name="delete_news_post">Delete post</string>
    <string name="delete_post_are_you_sure">Are you sure you want to delete this post?</string>
    <string name="failed_update_post">Failed to update post</string>
    <string name="failed_create_notification">Failed to create notification</string>
    <string name="empty_notification">Notification fields can\'t be empty</string>
    <string name="report_bug_email_subject">Report problem - HI TECH Android application</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="information_about_event">Information about event</string>
    <string name="update_event">UPDATE EVENT</string>
    <string name="empty_title">Title is empty</string>
    <string name="empty_content">Content is empty</string>
    <string name="empty_notification_description">Notification description is empty</string>
    <string name="error_loading_news_post">Error loading post</string>
    <string name="create_event">CREATE EVENT</string>
    <string name="empty_date">Date is empty</string>
    <string name="empty_time">Time is empty</string>
    <string name="empty_location">Location is empty</string>
    <string name="empty_information">Information is empty</string>
    <string name="error_delete_event">Failed to delete event</string>
    <string name="error_delete_news_post">Failed to delete post</string>
    <string name="join_chat">Join Chat</string>
    <string name="close_chat">Close chat</string>
    <string name="write_something">Write something…</string>
    <string name="select_case">Select a case that best match your question</string>
    <string name="enter_your_name">Enter your name:</string>
    <string name="error_getting_events">Error loading events, check your internet connection and restart the app.</string>
    <string name="chatting_With">Chatting with %1$s</string>
    <string name="leave_chat">Leave chat</string>
    <string name="is_chatting_here">%1$s is currently chatting here.</string>
    <string name="error_chat">Error loading all chat functions, check your internet connection and restart the app.</string>
    <string name="wating_for_admin">Waiting for a Board member to join</string>
    <string name="close_chat_confirmation">Do you want to close this chat? You will no longer be able to access the chat.</string>
    <string name="join_chat_confirmation">Do you want to join the chat?</string>
    <string name="leave_chat_confirmation">Do you want to leave the chat?</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="case_education">Education</string>
    <string name="case_work_environment">Work environment</string>
    <string name="case_other">Other</string>
    <string name="case_event">Events</string>
    <string name="account_made_with_google">You made your account with Google, update your account with your role.</string>
    <string name="user_not_verified">User needs to be verified by an admin.</string>
    <string name="verify_new_admin">Verify new admin</string>
    <string name="verify_user">Verify Admin</string>
    <string name="no_user_to_verify">No user to verify</string>
    <string name="user_verified">User verified successfully!</string>
    <string name="user_denied">User denied admin access.</string>
    <string name="new_chat">New chat</string>
    <string name="new_message">New message</string>
    <string name="new_chat_intro">Hello! :)         We will answer as fast as we can.         You can leave the chat and come back to it whenever you want.         You will get notified when you get a reply.</string>
    <string name="active_chats">ACTIVE CHATS</string>
    <string name="register">REGISTER</string>
    <string name="new_event">NEW EVENT</string>
    <string name="about_hi_shop">The HI SHOP is a small store where you can buy everything you need for epic adventures in your overall and the student culture in Jönköping. We have overalls, patches, glue, pencils, towels for the CAPS event and much more.</string>
    <string name="about_hi_shop">The HI SHOP is a small store where you can buy everything you need for epic adventures in your overall and the student culture in Jönköping. We have overalls, patches, glue, pencils, towels for the CAPS event and much more.</string>
</resources>