<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    tools:context=".chat.ContactCaseFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="139dp"
        android:text="@string/select_case"
        android:textAlignment="center"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_name"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/localUsername"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Button
            android:id="@+id/btnCaseEducation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_background_selector"
            android:enabled="false"
            android:fontFamily="@font/avenir_next_bold"
            android:text="@string/case_education"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnCaseWorkEnvironment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_background_selector"
            android:enabled="false"
            android:fontFamily="@font/avenir_next_bold"
            android:text="@string/case_work_environment"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnCaseEvents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_background_selector"
            android:enabled="false"
            android:fontFamily="@font/avenir_next_bold"
            android:text="@string/case_event"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnCaseOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_background_selector"
            android:enabled="false"
            android:fontFamily="@font/avenir_next_bold"
            android:text="@string/case_other"
            android:textColor="@color/black" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progressbarContactCase"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTint="#FFFFFF"
            android:indeterminateTintMode="src_atop"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>